[gd_scene load_steps=33 format=2]

[ext_resource path="res://scenes/archive/Archive.gd" type="Script" id=2]
[ext_resource path="res://images/icons/left.png" type="Texture" id=3]
[ext_resource path="res://fonts/harmony-os-sans-sc/ArchiveInfo.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/harmony-os-sans-sc/H1TitleBolder.tres" type="DynamicFont" id=5]
[ext_resource path="res://images/grids.jpg" type="Texture" id=6]
[ext_resource path="res://fonts/harmony-os-sans-sc/ArchiveTimelineTitle.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/harmony-os-sans-sc/ArchiveTimelineUrgentTime.tres" type="DynamicFont" id=8]
[ext_resource path="res://fonts/harmony-os-sans-sc/ArchiveTimelineContent.tres" type="DynamicFont" id=9]
[ext_resource path="res://images/white.png" type="Texture" id=10]
[ext_resource path="res://shaders/blur.shader" type="Shader" id=11]
[ext_resource path="res://addons/SmoothScroll/SmoothScrollContainer.gd" type="Script" id=12]
[ext_resource path="res://fonts/source-hans-serif/ArchiveTimelineUrgentTime.tres" type="DynamicFont" id=13]
[ext_resource path="res://fonts/source-hans-serif/ArchiveTimelineContent.tres" type="DynamicFont" id=14]
[ext_resource path="res://fonts/source-hans-serif/ArchiveTimelineTitle.tres" type="DynamicFont" id=15]
[ext_resource path="res://fonts/harmony-os-sans-sc/ArchiveQteTitle.tres" type="DynamicFont" id=16]
[ext_resource path="res://fonts/harmony-os-sans-sc/ArchiveQteProgress.tres" type="DynamicFont" id=17]
[ext_resource path="res://fonts/harmony-os-sans-sc/ArchiveQteText.tres" type="DynamicFont" id=18]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.235294, 0.392157, 0.658824, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.235294, 0.392157, 0.658824, 1 )

[sub_resource type="DynamicFont" id=4]
size = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.235294, 0.392157, 0.658824, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.235294, 0.392157, 0.658824, 1 )

[sub_resource type="DynamicFont" id=14]
size = 1

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.235294, 0.392157, 0.658824, 1 )
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_detail = 1

[sub_resource type="DynamicFont" id=11]
size = 1

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.235294, 0.392157, 0.658824, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.533333, 0.396078, 0.14902, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.533333, 0.396078, 0.14902, 1 )

[sub_resource type="DynamicFont" id=9]
size = 1

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.964706, 0.964706, 0.964706, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.533333, 0.396078, 0.14902, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 11 )
shader_param/amount = 2.5

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="TempBG" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.223529 )
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="Templates" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MOD" type="Control" parent="Templates"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Urgent" type="Control" parent="Templates/MOD"]
margin_left = 60.0
margin_top = 296.0
margin_right = 900.0
margin_bottom = 496.0
rect_min_size = Vector2( 0, 260 )
mouse_filter = 1

[node name="LinkLine" type="ColorRect" parent="Templates/MOD/Urgent"]
margin_left = 214.0
margin_top = 30.0
margin_right = 222.0
margin_bottom = 290.0
mouse_filter = 1
color = Color( 0.235294, 0.392157, 0.658824, 1 )

[node name="TextLine" type="ColorRect" parent="Templates/MOD/Urgent"]
margin_left = 214.0
margin_top = 30.0
margin_right = 334.0
margin_bottom = 34.0
mouse_filter = 1
color = Color( 0.235294, 0.392157, 0.658824, 1 )

[node name="Circle" type="Label" parent="Templates/MOD/Urgent"]
margin_left = 187.0
margin_right = 247.0
margin_bottom = 60.0
mouse_filter = 1
custom_styles/normal = SubResource( 2 )

[node name="BigTime" type="Label" parent="Templates/MOD/Urgent"]
margin_top = 12.0
margin_right = 220.0
margin_bottom = 48.0
mouse_filter = 1
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 3 )
text = "八月一日，上午十时"
valign = 1

[node name="Content" type="VBoxContainer" parent="Templates/MOD/Urgent"]
margin_left = 360.0
margin_right = 840.0

[node name="Text" type="RichTextLabel" parent="Templates/MOD/Urgent/Content"]
margin_right = 480.0
margin_bottom = 93.0
mouse_filter = 1
custom_colors/default_color = Color( 0.235294, 0.392157, 0.658824, 1 )
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "我们（探险队，包括队长基阿，工程师参咸，安全员西昂，导航员罗明）来到矿洞，进行物料检查和矿洞环境检查。"
meta_underlined = false
text = "我们（探险队，包括队长基阿，工程师参咸，安全员西昂，导航员罗明）来到矿洞，进行物料检查和矿洞环境检查。"
fit_content_height = true
scroll_active = false

[node name="Datetime" type="Label" parent="Templates/MOD/Urgent/Content"]
margin_top = 97.0
margin_right = 480.0
margin_bottom = 127.0
mouse_filter = 1
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_fonts/font = ExtResource( 9 )
text = "08-01, 10:00"

[node name="Important" type="Control" parent="Templates/MOD"]
margin_left = 60.0
margin_top = 488.0
margin_right = 900.0
margin_bottom = 688.0
rect_min_size = Vector2( 0, 260 )
mouse_filter = 1

[node name="LinkLine" type="ColorRect" parent="Templates/MOD/Important"]
margin_left = 214.0
margin_top = 15.0
margin_right = 222.0
margin_bottom = 275.0
mouse_filter = 1
color = Color( 0.235294, 0.392157, 0.658824, 1 )

[node name="TextLine" type="ColorRect" parent="Templates/MOD/Important"]
margin_left = 214.0
margin_top = 15.0
margin_right = 334.0
margin_bottom = 19.0
mouse_filter = 1
color = Color( 0.235294, 0.392157, 0.658824, 1 )

[node name="Circle" type="Label" parent="Templates/MOD/Important"]
margin_left = 202.0
margin_right = 232.0
margin_bottom = 30.0
mouse_filter = 1
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 2 )

[node name="Content" type="VBoxContainer" parent="Templates/MOD/Important"]
margin_left = 360.0
margin_right = 840.0

[node name="Text" type="RichTextLabel" parent="Templates/MOD/Important/Content"]
margin_right = 480.0
margin_bottom = 93.0
mouse_filter = 1
custom_colors/default_color = Color( 0.235294, 0.392157, 0.658824, 1 )
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "我们（探险队，包括队长基阿，工程师参咸，安全员西昂，导航员罗明）来到矿洞，进行物料检查和矿洞环境检查。"
meta_underlined = false
text = "我们（探险队，包括队长基阿，工程师参咸，安全员西昂，导航员罗明）来到矿洞，进行物料检查和矿洞环境检查。"
fit_content_height = true
scroll_active = false

[node name="Datetime" type="Label" parent="Templates/MOD/Important/Content"]
margin_top = 97.0
margin_right = 480.0
margin_bottom = 127.0
mouse_filter = 1
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_fonts/font = ExtResource( 9 )
text = "08-01, 10:00"

[node name="General" type="Control" parent="Templates/MOD"]
margin_left = 60.0
margin_top = 680.0
margin_right = 900.0
margin_bottom = 880.0
rect_min_size = Vector2( 0, 260 )
mouse_filter = 1

[node name="LinkLine" type="ColorRect" parent="Templates/MOD/General"]
margin_left = 214.0
margin_top = 15.0
margin_right = 222.0
margin_bottom = 275.0
mouse_filter = 1
color = Color( 0.235294, 0.392157, 0.658824, 1 )

[node name="TextLine" type="ColorRect" parent="Templates/MOD/General"]
margin_left = 214.0
margin_top = 15.0
margin_right = 334.0
margin_bottom = 19.0
mouse_filter = 1
color = Color( 0.235294, 0.392157, 0.658824, 1 )

[node name="Circle" type="Label" parent="Templates/MOD/General"]
margin_left = 202.0
margin_right = 232.0
margin_bottom = 30.0
mouse_filter = 1
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Content" type="VBoxContainer" parent="Templates/MOD/General"]
margin_left = 360.0
margin_right = 840.0

[node name="Text" type="RichTextLabel" parent="Templates/MOD/General/Content"]
margin_right = 480.0
margin_bottom = 93.0
mouse_filter = 1
custom_colors/default_color = Color( 0.235294, 0.392157, 0.658824, 1 )
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "我们（探险队，包括队长基阿，工程师参咸，安全员西昂，导航员罗明）来到矿洞，进行物料检查和矿洞环境检查。"
meta_underlined = false
text = "我们（探险队，包括队长基阿，工程师参咸，安全员西昂，导航员罗明）来到矿洞，进行物料检查和矿洞环境检查。"
fit_content_height = true
scroll_active = false

[node name="Datetime" type="Label" parent="Templates/MOD/General/Content"]
margin_top = 97.0
margin_right = 480.0
margin_bottom = 127.0
mouse_filter = 1
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_fonts/font = ExtResource( 9 )
text = "08-01, 10:00"

[node name="Qte" type="Control" parent="Templates/MOD"]
margin_left = 60.0
margin_top = 780.0
margin_right = 900.0
margin_bottom = 908.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 1

[node name="LinkLine" type="ColorRect" parent="Templates/MOD/Qte"]
margin_left = 214.0
margin_right = 222.0
margin_bottom = 48.0
color = Color( 0.235294, 0.392157, 0.658824, 1 )

[node name="Box" type="VBoxContainer" parent="Templates/MOD/Qte"]
margin_left = 360.0
margin_top = 32.0
margin_right = 840.0
margin_bottom = 80.0
custom_constants/separation = 0

[node name="Title" type="ColorRect" parent="Templates/MOD/Qte/Box"]
margin_right = 480.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
color = Color( 0.235294, 0.392157, 0.658824, 1 )

[node name="Marign" type="MarginContainer" parent="Templates/MOD/Qte/Box/Title"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="Label" type="Label" parent="Templates/MOD/Qte/Box/Title/Marign"]
margin_left = 8.0
margin_top = 6.0
margin_right = 472.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 16 )
text = "基阿剿灭怪物…"
valign = 1

[node name="Content" type="VBoxContainer" parent="Templates/MOD/Qte/Box"]
margin_top = 48.0
margin_right = 480.0
margin_bottom = 48.0
custom_constants/separation = 0

[node name="QteRowMiss" type="HBoxContainer" parent="Templates/MOD"]
margin_left = 420.0
margin_top = 828.0
margin_right = 900.0
margin_bottom = 892.0
custom_constants/separation = 16

[node name="LeftBorder" type="Label" parent="Templates/MOD/QteRowMiss"]
margin_right = 2.0
margin_bottom = 64.0
rect_min_size = Vector2( 2, 64 )
mouse_filter = 1
custom_styles/normal = SubResource( 13 )

[node name="Progress" type="Label" parent="Templates/MOD/QteRowMiss"]
margin_left = 18.0
margin_right = 130.0
margin_bottom = 64.0
rect_min_size = Vector2( 112, 64 )
mouse_filter = 1
custom_colors/font_color = Color( 0.564706, 0.654902, 0.811765, 1 )
custom_fonts/font = ExtResource( 17 )
text = "22%"
align = 2
valign = 1

[node name="Text" type="Label" parent="Templates/MOD/QteRowMiss"]
margin_left = 146.0
margin_right = 462.0
margin_bottom = 64.0
rect_min_size = Vector2( 316, 64 )
mouse_filter = 1
custom_colors/font_color = Color( 0.564706, 0.654902, 0.811765, 1 )
custom_fonts/font = ExtResource( 18 )
text = "完美解决所有怪物。"
valign = 1
autowrap = true

[node name="RightBorder" type="Label" parent="Templates/MOD/QteRowMiss"]
margin_left = 478.0
margin_right = 480.0
margin_bottom = 64.0
rect_min_size = Vector2( 2, 64 )
mouse_filter = 1
custom_styles/normal = SubResource( 13 )

[node name="QteRowPass" type="HBoxContainer" parent="Templates/MOD"]
margin_left = 420.0
margin_top = 892.0
margin_right = 900.0
margin_bottom = 956.0
custom_constants/separation = 16

[node name="LeftBorder" type="Label" parent="Templates/MOD/QteRowPass"]
margin_right = 2.0
margin_bottom = 64.0
rect_min_size = Vector2( 2, 64 )
mouse_filter = 1
custom_styles/normal = SubResource( 13 )

[node name="Triangle" type="Label" parent="Templates/MOD/QteRowPass/LeftBorder"]
margin_left = 2.0
margin_top = 24.0
margin_right = 10.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 16 )
mouse_filter = 1
custom_fonts/font = SubResource( 14 )
custom_styles/normal = SubResource( 15 )

[node name="Progress" type="Label" parent="Templates/MOD/QteRowPass"]
margin_left = 18.0
margin_right = 130.0
margin_bottom = 64.0
rect_min_size = Vector2( 112, 64 )
mouse_filter = 1
custom_colors/font_color = Color( 0.235294, 0.392157, 0.658824, 1 )
custom_fonts/font = ExtResource( 17 )
text = "100%"
align = 2
valign = 1

[node name="Text" type="Label" parent="Templates/MOD/QteRowPass"]
margin_left = 146.0
margin_right = 462.0
margin_bottom = 64.0
rect_min_size = Vector2( 316, 64 )
mouse_filter = 1
custom_colors/font_color = Color( 0.235294, 0.392157, 0.658824, 1 )
custom_fonts/font = ExtResource( 18 )
text = "完美解决所有怪物。"
valign = 1
autowrap = true

[node name="RightBorder" type="Label" parent="Templates/MOD/QteRowPass"]
margin_left = 478.0
margin_right = 480.0
margin_bottom = 64.0
rect_min_size = Vector2( 2, 64 )
mouse_filter = 1
custom_styles/normal = SubResource( 13 )

[node name="QteRowBottomBorder" type="Label" parent="Templates/MOD"]
margin_left = 420.0
margin_top = 828.0
margin_right = 900.0
margin_bottom = 830.0
rect_min_size = Vector2( 0, 2 )
mouse_filter = 1
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 12 )

[node name="TSR" type="Control" parent="Templates"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Urgent" type="Control" parent="Templates/TSR"]
margin_left = 1020.0
margin_top = 302.0
margin_right = 1860.0
margin_bottom = 502.0
rect_min_size = Vector2( 0, 260 )
mouse_filter = 1

[node name="LinkLine" type="ColorRect" parent="Templates/TSR/Urgent"]
margin_left = 627.0
margin_top = 30.0
margin_right = 635.0
margin_bottom = 290.0
mouse_filter = 1
color = Color( 0.533333, 0.396078, 0.14902, 1 )

[node name="TextLine" type="ColorRect" parent="Templates/TSR/Urgent"]
margin_left = 510.0
margin_top = 30.0
margin_right = 630.0
margin_bottom = 34.0
mouse_filter = 1
color = Color( 0.533333, 0.396078, 0.14902, 1 )

[node name="Circle" type="Label" parent="Templates/TSR/Urgent"]
margin_left = 600.0
margin_right = 660.0
margin_bottom = 60.0
mouse_filter = 1
custom_styles/normal = SubResource( 7 )

[node name="BigTime" type="Label" parent="Templates/TSR/Urgent"]
margin_left = 620.0
margin_top = 10.0
margin_right = 840.0
margin_bottom = 50.0
mouse_filter = 1
custom_fonts/font = ExtResource( 13 )
custom_styles/normal = SubResource( 8 )
text = "八月一日"
align = 2
valign = 1

[node name="Content" type="VBoxContainer" parent="Templates/TSR/Urgent"]
margin_left = 16.0
margin_right = 496.0
margin_bottom = 143.0

[node name="Text" type="RichTextLabel" parent="Templates/TSR/Urgent/Content"]
margin_right = 480.0
margin_bottom = 105.0
mouse_filter = 1
custom_colors/default_color = Color( 0.533333, 0.396078, 0.14902, 1 )
custom_fonts/normal_font = ExtResource( 14 )
bbcode_enabled = true
bbcode_text = "[right]我们（探险队，包括队长基阿，工程师参咸，安全员西昂，导航员罗明）来到矿洞，进行物料检查和矿洞环境检查。[/right]"
meta_underlined = false
text = "我们（探险队，包括队长基阿，工程师参咸，安全员西昂，导航员罗明）来到矿洞，进行物料检查和矿洞环境检查。"
fit_content_height = true
scroll_active = false

[node name="Datetime" type="Label" parent="Templates/TSR/Urgent/Content"]
margin_top = 109.0
margin_right = 480.0
margin_bottom = 143.0
mouse_filter = 1
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_fonts/font = ExtResource( 14 )
text = "08-01, 10:00"
align = 2

[node name="Important" type="Control" parent="Templates/TSR"]
margin_left = 1020.0
margin_top = 494.0
margin_right = 1860.0
margin_bottom = 694.0
rect_min_size = Vector2( 0, 260 )
mouse_filter = 1

[node name="LinkLine" type="ColorRect" parent="Templates/TSR/Important"]
margin_left = 627.0
margin_top = 30.0
margin_right = 635.0
margin_bottom = 290.0
mouse_filter = 1
color = Color( 0.533333, 0.396078, 0.14902, 1 )

[node name="TextLine" type="ColorRect" parent="Templates/TSR/Important"]
margin_left = 510.0
margin_top = 15.0
margin_right = 630.0
margin_bottom = 19.0
mouse_filter = 1
color = Color( 0.533333, 0.396078, 0.14902, 1 )

[node name="Circle" type="Label" parent="Templates/TSR/Important"]
margin_left = 615.0
margin_right = 645.0
margin_bottom = 30.0
mouse_filter = 1
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 7 )

[node name="Content" type="VBoxContainer" parent="Templates/TSR/Important"]
margin_left = 16.0
margin_right = 496.0
margin_bottom = 143.0

[node name="Text" type="RichTextLabel" parent="Templates/TSR/Important/Content"]
margin_right = 480.0
margin_bottom = 105.0
mouse_filter = 1
custom_colors/default_color = Color( 0.533333, 0.396078, 0.14902, 1 )
custom_fonts/normal_font = ExtResource( 14 )
bbcode_enabled = true
bbcode_text = "[right]我们（探险队，包括队长基阿，工程师参咸，安全员西昂，导航员罗明）来到矿洞，进行物料检查和矿洞环境检查。[/right]"
meta_underlined = false
text = "我们（探险队，包括队长基阿，工程师参咸，安全员西昂，导航员罗明）来到矿洞，进行物料检查和矿洞环境检查。"
fit_content_height = true
scroll_active = false

[node name="Datetime" type="Label" parent="Templates/TSR/Important/Content"]
margin_top = 109.0
margin_right = 480.0
margin_bottom = 143.0
mouse_filter = 1
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_fonts/font = ExtResource( 14 )
text = "08-01, 10:00"
align = 2

[node name="General" type="Control" parent="Templates/TSR"]
margin_left = 1020.0
margin_top = 686.0
margin_right = 1860.0
margin_bottom = 886.0
rect_min_size = Vector2( 0, 260 )
mouse_filter = 1

[node name="LinkLine" type="ColorRect" parent="Templates/TSR/General"]
margin_left = 627.0
margin_top = 30.0
margin_right = 635.0
margin_bottom = 290.0
mouse_filter = 1
color = Color( 0.533333, 0.396078, 0.14902, 1 )

[node name="TextLine" type="ColorRect" parent="Templates/TSR/General"]
margin_left = 510.0
margin_top = 15.0
margin_right = 630.0
margin_bottom = 19.0
mouse_filter = 1
color = Color( 0.533333, 0.396078, 0.14902, 1 )

[node name="Circle" type="Label" parent="Templates/TSR/General"]
margin_left = 615.0
margin_right = 645.0
margin_bottom = 30.0
mouse_filter = 1
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[node name="Content" type="VBoxContainer" parent="Templates/TSR/General"]
margin_left = 16.0
margin_right = 496.0
margin_bottom = 143.0

[node name="Text" type="RichTextLabel" parent="Templates/TSR/General/Content"]
margin_right = 480.0
margin_bottom = 105.0
mouse_filter = 1
custom_colors/default_color = Color( 0.533333, 0.396078, 0.14902, 1 )
custom_fonts/normal_font = ExtResource( 14 )
bbcode_enabled = true
bbcode_text = "[right]我们（探险队，包括队长基阿，工程师参咸，安全员西昂，导航员罗明）来到矿洞，进行物料检查和矿洞环境检查。[/right]"
meta_underlined = false
text = "我们（探险队，包括队长基阿，工程师参咸，安全员西昂，导航员罗明）来到矿洞，进行物料检查和矿洞环境检查。"
fit_content_height = true
scroll_active = false

[node name="Datetime" type="Label" parent="Templates/TSR/General/Content"]
margin_top = 109.0
margin_right = 480.0
margin_bottom = 143.0
mouse_filter = 1
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_fonts/font = ExtResource( 14 )
text = "08-01, 10:00"
align = 2

[node name="Timeline" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
mouse_default_cursor_shape = 9
scroll_horizontal_enabled = false
scroll_deadzone = 1
script = ExtResource( 12 )
damping = 1.0

[node name="Margin" type="MarginContainer" parent="Timeline"]
margin_right = 1920.0
margin_bottom = 310.0
mouse_filter = 1
custom_constants/margin_right = 60
custom_constants/margin_top = 240
custom_constants/margin_left = 60

[node name="HBox" type="HBoxContainer" parent="Timeline/Margin"]
margin_left = 60.0
margin_top = 240.0
margin_right = 1860.0
margin_bottom = 310.0
custom_constants/separation = 120

[node name="MOD" type="VBoxContainer" parent="Timeline/Margin/HBox"]
margin_right = 840.0
margin_bottom = 70.0
custom_constants/separation = -8

[node name="Title" type="PanelContainer" parent="Timeline/Margin/HBox/MOD"]
margin_right = 840.0
margin_bottom = 64.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Timeline/Margin/HBox/MOD/Title"]
margin_right = 840.0
margin_bottom = 64.0
rect_min_size = Vector2( 840, 64 )
custom_colors/font_color = Color( 0.235294, 0.392157, 0.658824, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "TR:NODE:MOD:TITLE"
valign = 1

[node name="TSR" type="VBoxContainer" parent="Timeline/Margin/HBox"]
margin_left = 960.0
margin_right = 1800.0
margin_bottom = 70.0
custom_constants/separation = -8

[node name="Title" type="PanelContainer" parent="Timeline/Margin/HBox/TSR"]
margin_right = 840.0
margin_bottom = 70.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Timeline/Margin/HBox/TSR/Title"]
margin_right = 840.0
margin_bottom = 70.0
rect_min_size = Vector2( 840, 64 )
custom_colors/font_color = Color( 0.533333, 0.396078, 0.14902, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 15 )
text = "TR:NODE:TSR:TITLE"
align = 2
valign = 1

[node name="BlurBG" type="TextureRect" parent="."]
visible = false
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 75.0
margin_bottom = -901.0
rect_min_size = Vector2( 1920, 104 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 10 )
expand = true

[node name="TitleBG" type="ColorRect" parent="."]
margin_top = 75.0
margin_right = 1920.0
margin_bottom = 115.0
rect_min_size = Vector2( 1920, 104 )
color = Color( 0.964706, 0.964706, 0.964706, 1 )

[node name="TitleContainer" type="Control" parent="."]
visible = false
margin_top = 75.0
margin_right = 104.0
margin_bottom = 179.0
rect_min_size = Vector2( 104, 104 )

[node name="BackButtonTween" type="Tween" parent="TitleContainer"]
repeat = true
playback/repeat = true

[node name="BG" type="ColorRect" parent="TitleContainer"]
margin_right = 556.0
margin_bottom = 104.0
color = Color( 0, 0, 0, 1 )

[node name="Right" type="ColorRect" parent="TitleContainer"]
margin_left = 576.0
margin_right = 608.0
margin_bottom = 104.0
color = Color( 0, 0, 0, 1 )

[node name="BackButton" type="TextureButton" parent="TitleContainer"]
margin_right = 104.0
margin_bottom = 104.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )

[node name="Title" type="Label" parent="TitleContainer"]
margin_left = 102.0
margin_right = 462.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 5 )
text = "TR:NODE:TITLE"
valign = 1

[node name="InfoContainer" type="HBoxContainer" parent="."]
margin_left = 60.0
margin_top = 82.0
margin_right = 1860.0
margin_bottom = 170.0
custom_constants/separation = 72
alignment = 2

[node name="LeftContainer" type="HBoxContainer" parent="InfoContainer"]
margin_left = 518.0
margin_right = 1093.0
margin_bottom = 88.0
custom_constants/separation = 24

[node name="TitleContainer" type="VBoxContainer" parent="InfoContainer/LeftContainer"]
margin_right = 282.0
margin_bottom = 88.0
custom_constants/separation = 24
alignment = 1

[node name="LabelFile" type="Label" parent="InfoContainer/LeftContainer/TitleContainer"]
margin_top = 3.0
margin_right = 282.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:NODE:HEADER:FILE"

[node name="LabelWho" type="Label" parent="InfoContainer/LeftContainer/TitleContainer"]
margin_top = 56.0
margin_right = 282.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:NODE:HEADER:WHO"

[node name="ContentContainer" type="VBoxContainer" parent="InfoContainer/LeftContainer"]
margin_left = 306.0
margin_right = 575.0
margin_bottom = 88.0
custom_constants/separation = 24
alignment = 1

[node name="LabelFile" type="Label" parent="InfoContainer/LeftContainer/ContentContainer"]
margin_top = 3.0
margin_right = 269.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "#ARCH:DGR:22481:002"

[node name="LabelWho" type="Label" parent="InfoContainer/LeftContainer/ContentContainer"]
margin_top = 56.0
margin_right = 269.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:ROMIN:FULLNAME"

[node name="RightContainer" type="HBoxContainer" parent="InfoContainer"]
margin_left = 1165.0
margin_right = 1800.0
margin_bottom = 88.0
custom_constants/separation = 24

[node name="TitleContainer" type="VBoxContainer" parent="InfoContainer/RightContainer"]
margin_right = 289.0
margin_bottom = 88.0
custom_constants/separation = 24
alignment = 1

[node name="LabelCreated" type="Label" parent="InfoContainer/RightContainer/TitleContainer"]
margin_top = 3.0
margin_right = 289.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:NODE:HEADER:FIRST"

[node name="LabelLast" type="Label" parent="InfoContainer/RightContainer/TitleContainer"]
margin_top = 56.0
margin_right = 289.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:NODE:HEADER:LAST"

[node name="ContentContainer" type="VBoxContainer" parent="InfoContainer/RightContainer"]
margin_left = 313.0
margin_right = 635.0
margin_bottom = 88.0
custom_constants/separation = 24
alignment = 1

[node name="LabelCreated" type="Label" parent="InfoContainer/RightContainer/ContentContainer"]
margin_top = 3.0
margin_right = 322.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0224-08-01T20:04:07+00:00"

[node name="LabelLast" type="Label" parent="InfoContainer/RightContainer/ContentContainer"]
margin_top = 56.0
margin_right = 322.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0224-08-01T20:04:07+00:00"

[connection signal="gui_input" from="Timeline" to="." method="_on_Timeline_gui_input"]
[connection signal="resized" from="TitleContainer/Title" to="." method="_on_Title_resized"]
